2005-03-04  Jon Bright  <jon@siliconcircus.com>
	* win32/process.cc (process_spawn): Now takes 
	const char * const *
	* platform.hh (process_spawn): Ditto
	* unix/process.cc (process_spawn): Ditto
	* General: Sorry about all these commits, I'm syncing back and
	forth between Linux and Win32

2005-03-04  Jon Bright  <jon@siliconcircus.com>
	* win32/process.cc (process_spawn): Now takes char * const *
	* platform.hh (process_spawn): Ditto
	* unix/process.cc (process_spawn): Ditto
	(exists_on_path): argv now const char*[]

2005-03-04  Jon Bright  <jon@siliconcircus.com>
	* win32/process.cc: Added forgotten file
	* unix/process.cc: Include stat.h, (process_*) fix compilation
	errors

2005-03-04  Jon Bright  <jon@siliconcircus.com>
	* unix/process.cc: Added forgotten file

2005-03-03  Jon Bright  <jon@siliconcircus.com>
	* lposix.c: Deleted
	* win32/process.cc: Created, added Win32 versions of functions
	exists_on_path, make_executable, process_spawn, process_wait,
	process_kill, process_sleep
	* unix/process.cc: Ditto, for the Unix versions.
	* lua.cc: Add LUA wrappers for the above functions, register
	them with LUA
	* std_hooks.lua (execute, attr_functions->execute, 
	program_exists_in_path): Use the new functions instead of posix
	functions
	* t_can_execute.at (touchhook.lua): Ditto

2005-03-01  Derek Scherger  <derek@echologic.com>

	* app_state.cc (set_restriction): actually ignore ignored files
	rather than trying to validate them

2005-03-01  Derek Scherger  <derek@echologic.com>

	* tests/t_diff_binary.at: new test (bug report)
	* tests/t_command_completion.at: new test
	* tests/t_merge_rename_file_and_rename_dir.at: new test
	* testsuite.at: include new tests
	
2005-02-28  Richard Levitte  <richard@levitte.org>

	* Makefile.am (BUILT_SOURCES_CLEAN): Moved mt-stding.h from here...
	(DISTCLEANFILES): ... to here.  Since mt-stding.h is created by
	config.status, it should only be removed by the distclean target.

2005-02-28  Matt Johnston  <matt@ucc.asn.au>
